--- a/coniferous.html
+++ b/coniferous.html
@@ -29,7 +29,7 @@
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
-        <img src="img/logo.png" alt="" id="logo" />
+        <img src="img/logo.png" alt="Website logo" id="logo" />
 
         <ul class="menu">
           <li><a href="index.html">Home</a></li>
@@ -87,7 +87,11 @@
           <template>
             <section class="planter">
               <article class="plants_by_1">
-                <img src="img/baggrund_1.png" alt="" class="billede_prøve" />
+                <img
+                  src="img/baggrund_1.png"
+                  alt="Background image"
+                  class="billede_prøve"
+                />
                 <div class="des"><a href="plant.html">PLANT</a></div>
               </article>
             </section>
@@ -95,10 +99,18 @@
         </article>
         <div class="section">
           <img src="img/blok.webp" alt="blok" class="background" />
-          <img src="img/stick.png" alt="" class="foreground" />
-          <img src="img/stick_2.png" alt="" class="foreground_2" />
-          <img src="img/flower.png" alt="" class="foreground_3" />
-          <img src="img/flower_1.png" alt="" class="foreground_4" />
+          <img src="img/stick.png" alt="Leaf styling" class="foreground" />
+          <img
+            src="img/stick_2.png"
+            alt="Leaf for styling"
+            class="foreground_2"
+          />
+          <img src="img/flower.png" alt="Flower styling" class="foreground_3" />
+          <img
+            src="img/flower_1.png"
+            alt="Flower for styling"
+            class="foreground_4"
+          />
         </div>
       </div>
     </main>
@@ -113,14 +125,14 @@
           <div class="partner">
             <p>Developed in partnership with</p>
             <div class="partner_pic">
-              <img src="img/byhøst.png" alt="" />
-              <img src="img/naturvejleder.png" alt="" />
-              <img src="img/gojoin.png" alt="" />
-              <img src="img/tombola.png" alt="" />
+              <img src="img/byhøst.png" alt="Logo of byhøst" />
+              <img src="img/naturvejleder.png" alt="Logo of naturvejleder" />
+              <img src="img/gojoin.png" alt="Logo of gojoin" />
+              <img src="img/tombola.png" alt="Logo of tombola" />
             </div>
             <div class="partner_pic_2">
-              <img src="img/friluft.png" alt="" />
-              <img src="img/supertusch.png" alt="" />
+              <img src="img/friluft.png" alt="Logo of friluft" />
+              <img src="img/supertusch.png" alt="Logo of supertusch" />
             </div>
           </div>
         </div>
