--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
-        <img src="img/logo.png" alt="" id="logo" />
+        <img src="img/logo.png" alt="Logo" id="logo" />
 
         <ul class="menu">
           <li><a href="index.html">Home</a></li>
@@ -58,19 +58,19 @@
         <div class="foot">
           <div class="project">
             <p>A project initiated by</p>
-            <img src="img/mad.png" alt="" />
+            <img src="img/mad.png" alt="Logo" />
           </div>
           <div class="partner">
             <p>Developed in partnership with</p>
             <div class="partner_pic">
-              <img src="img/byhøst.png" alt="" />
-              <img src="img/naturvejleder.png" alt="" />
-              <img src="img/gojoin.png" alt="" />
-              <img src="img/tombola.png" alt="" />
+              <img src="img/byhøst.png" alt="Logo" />
+              <img src="img/naturvejleder.png" alt="Logo" />
+              <img src="img/gojoin.png" alt="Logo" />
+              <img src="img/tombola.png" alt="Logo" />
             </div>
             <div class="partner_pic_2">
-              <img src="img/friluft.png" alt="" />
-              <img src="img/supertusch.png" alt="" />
+              <img src="img/friluft.png" alt="Logo" />
+              <img src="img/supertusch.png" alt="Logo" />
             </div>
           </div>
         </div>
