--- a/season.html
+++ b/season.html
@@ -58,19 +58,19 @@
 
     <section class="season_list">
       <div class="season_1">
-        <img src="img/baggrund_1.png" alt="" />
+        <img src="img/baggrund_1.png" alt="background image" />
         <p>SEASON</p>
       </div>
       <div class="season_1">
-        <img src="img/baggrund_1.png" alt="" />
+        <img src="img/baggrund_1.png" alt="background image" />
         <p>SEASON</p>
       </div>
       <div class="season_1">
-        <img src="img/baggrund_1.png" alt="" />
+        <img src="img/baggrund_1.png" alt="background image" />
         <p>SEASON</p>
       </div>
       <div class="season_1">
-        <img src="img/baggrund_1.png" alt="" />
+        <img src="img/baggrund_1.png" alt="background image" />
         <p>SEASON</p>
       </div>
     </section>
@@ -80,19 +80,19 @@
         <div class="foot">
           <div class="project">
             <p>A project initiated by</p>
-            <img src="img/mad.png" alt="" />
+            <img src="img/mad.png" alt="img food" />
           </div>
           <div class="partner">
             <p>Developed in partnership with</p>
             <div class="partner_pic">
-              <img src="img/byhøst.png" alt="" />
-              <img src="img/naturvejleder.png" alt="" />
-              <img src="img/gojoin.png" alt="" />
-              <img src="img/tombola.png" alt="" />
+              <img src="img/byhøst.png" alt="Logo" />
+              <img src="img/naturvejleder.png" alt="Logo" />
+              <img src="img/gojoin.png" alt="Logo" />
+              <img src="img/tombola.png" alt="Logo" />
             </div>
             <div class="partner_pic_2">
-              <img src="img/friluft.png" alt="" />
-              <img src="img/supertusch.png" alt="" />
+              <img src="img/friluft.png" alt="Logo" />
+              <img src="img/supertusch.png" alt="Logo" />
             </div>
           </div>
         </div>
