--- a/deciduous.html
+++ b/deciduous.html
@@ -29,7 +29,7 @@
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
-        <img src="img/logo.png" alt="" id="logo" />
+        <img src="img/logo.png" alt="Website logo" id="logo" />
 
         <ul class="menu">
           <li><a href="index.html">Home</a></li>
@@ -86,7 +86,11 @@
           <template>
             <section class="planter">
               <div class="plants_by_1">
-                <img src="img/baggrund_1.png" alt="" class="billede_prøve" />
+                <img
+                  src="img/baggrund_1.png"
+                  alt="Background picture"
+                  class="billede_prøve"
+                />
                 <div class="des"><a href="plant.html"></a></div>
               </div>
             </section>
@@ -94,10 +98,10 @@
         </article>
         <div class="section">
           <img src="img/blok.webp" alt="blok" class="background" />
-          <img src="img/stick.png" alt="" class="foreground" />
-          <img src="img/stick_2.png" alt="" class="foreground_2" />
-          <img src="img/flower.png" alt="" class="foreground_3" />
-          <img src="img/flower_1.png" alt="" class="foreground_4" />
+          <img src="img/stick.png" alt="stick" class="foreground" />
+          <img src="img/stick_2.png" alt="stick2" class="foreground_2" />
+          <img src="img/flower.png" alt="flower" class="foreground_3" />
+          <img src="img/flower_1.png" alt="flower2" class="foreground_4" />
         </div>
       </div>
     </main>
@@ -111,14 +115,14 @@
           <div class="partner">
             <p>Developed in partnership with</p>
             <div class="partner_pic">
-              <img src="img/byhøst.png" alt="" />
-              <img src="img/naturvejleder.png" alt="" />
-              <img src="img/gojoin.png" alt="" />
-              <img src="img/tombola.png" alt="" />
+              <img src="img/byhøst.png" alt="Logo" />
+              <img src="img/naturvejleder.png" alt="Logo" />
+              <img src="img/gojoin.png" alt="Logo" />
+              <img src="img/tombola.png" alt="Logo" />
             </div>
             <div class="partner_pic_2">
-              <img src="img/friluft.png" alt="" />
-              <img src="img/supertusch.png" alt="" />
+              <img src="img/friluft.png" alt="Logo" />
+              <img src="img/supertusch.png" alt="Logo" />
             </div>
           </div>
         </div>
